# pjs

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SPECIFICATION.md  cliff.toml  deny.toml  osv-scanner.toml  rust-toolchain.toml
crates/pjs-bench/: Cargo.toml  README.md
crates/pjs-bench/benches/: gat_query_benchmarks.rs  lcov.info  massive_data.rs  massive_data.rs.disabled  memory_benchmarks.rs  memory_benchmarks.rs.disabled  network_simulation.rs  network_simulation.rs.disabled  serde_overhead_bench.rs  simple_throughput.rs  streaming_benchmarks.rs  streaming_benchmarks.rs.disabled  time_to_first_data.rs  time_to_first_data.rs.disabled  zero_copy_bench.rs
crates/pjs-bench/src/: lib.rs
crates/pjs-client/: Cargo.toml
crates/pjs-client/src/: lib.rs
crates/pjs-core/: Cargo.toml  build.rs
crates/pjs-core/examples/: compression_demo.rs  gat_performance_showcase.rs  object_pool_performance.rs  priority_streaming.rs  priority_streaming.rs.bak  schema_validation_demo.rs  simple_priority_demo.rs  streaming_demo_server.rs  websocket_streaming.rs.disabled  zero_copy_demo.rs
crates/pjs-core/src/: config.rs  error.rs  frame.rs  global_alloc.rs  lib.rs  security.rs  semantic.rs  stream.rs
crates/pjs-core/src/application/: mod.rs  shared.rs
crates/pjs-core/src/application/commands/: mod.rs
crates/pjs-core/src/application/dto/: event_dto.rs  id_dto.rs  json_data_dto.rs  json_path_dto.rs  mod.rs  priority_dto.rs  schema_dto.rs  session_id_dto.rs  stream_id_dto.rs
crates/pjs-core/src/application/handlers/: command_handlers.rs  mod.rs  query_handlers.rs
crates/pjs-core/src/application/queries/: mod.rs
crates/pjs-core/src/application/services/: event_service.rs  mod.rs  optimization_service.rs  performance_analysis_service.rs  prioritization_service.rs  session_service.rs  stream_context.rs  stream_orchestrator.rs  streaming_service.rs
crates/pjs-core/src/compression/: mod.rs  secure.rs  zstd.rs
crates/pjs-core/src/config/: security.rs
crates/pjs-core/src/domain/: macros.rs  mod.rs
crates/pjs-core/src/domain/aggregates/: mod.rs  stream_session.rs
crates/pjs-core/src/domain/config/: limits.rs  mod.rs
crates/pjs-core/src/domain/entities/: frame.rs  mod.rs  stream.rs
crates/pjs-core/src/domain/events/: mod.rs
crates/pjs-core/src/domain/ports/: dictionary_store.rs  (+4 more)
crates/pjs-core/src/infrastructure/: mod.rs  schema_repository.rs
crates/pjs-core/src/memory/: arena.rs  mod.rs
crates/pjs-core/src/parser/: aligned_alloc.rs  allocator.rs  buffer_pool.rs  hybrid.rs  mod.rs  partial.rs  scanner.rs  simd_zero_copy.rs  simple.rs  sonic.rs  value.rs  zero_copy.rs
crates/pjs-core/src/security/: compression_bomb.rs  rate_limit.rs
crates/pjs-core/src/stream/: compression_integration.rs  mod.rs  priority.rs  reconstruction.rs
crates/pjs-core/tests/: compression_integration_coverage.rs  compression_integration_phase2.rs  compression_streaming_integration.rs  domain_ports_test.rs  event_publisher_comprehensive.rs  event_service_comprehensive.rs  gat_repository_comprehensive.rs  http_axum_endpoints.rs  http_axum_extension_comprehensive.rs  http_dto_serialization.rs  http_middleware_comprehensive.rs  http_middleware_tests.rs  http_rate_limiting_integration.rs  http_streaming_comprehensive.rs  infrastructure_integration_comprehensive.rs  memory_repository_comprehensive.rs  object_pool_comprehensive.rs  optimization_service_comprehensive.rs  parser_allocator_comprehensive.rs  parser_scanner_comprehensive.rs  parser_simd_classifier_comprehensive.rs  parser_simd_zero_copy_comprehensive.rs  parser_value_comprehensive.rs  performance_tests.rs  prioritization_service_comprehensive.rs  repositories_comprehensive.rs  schema_validation_integration.rs  security_bounded_iteration_integration.rs  security_comprehensive.rs  semantic_comprehensive.rs  stream_session_comprehensive.rs  streaming_adapter_integration.rs  timeout_monitor_comprehensive.rs  websocket_security.rs  websocket_server_comprehensive.rs  websocket_wire_level.rs  zero_copy_integration_test.rs
crates/pjs-core/tests/common/: mod.rs
crates/pjs-demo/: Cargo.toml
crates/pjs-demo/src/: lib.rs
crates/pjs-demo/src/clients/: websocket_demo.rs
crates/pjs-demo/src/data/: analytics.rs  ecommerce.rs  mod.rs  realtime.rs  social.rs
crates/pjs-demo/src/servers/: interactive_demo.rs  performance_comparison.rs  simple_demo.rs  websocket_streaming.rs
crates/pjs-demo/src/static/: interactive_demo.html  performance_comparison.html
crates/pjs-demo/src/utils/: mod.rs
crates/pjs-domain/: Cargo.toml
crates/pjs-domain/src/: lib.rs
crates/pjs-domain/src/entities/: frame.rs  stream.rs
crates/pjs-domain/src/events/: mod.rs
crates/pjs-domain/src/services/: mod.rs  priority.rs
crates/pjs-domain/src/value_objects/: backpressure.rs  id.rs  json_data.rs  json_path.rs  mod.rs  priority.rs  schema.rs  session_id.rs  stream_id.rs
crates/pjs-domain/tests/: events_comprehensive.rs  frame_comprehensive.rs  id_zero_cost_test.rs  json_data_comprehensive.rs  property_tests.rs  schema_comprehensive.rs  stream_comprehensive.rs
crates/pjs-gpu/: Cargo.toml
crates/pjs-gpu/src/: lib.rs
crates/pjs-server/: Cargo.toml
crates/pjs-server/src/: lib.rs
crates/pjs-transport/: Cargo.toml
crates/pjs-transport/src/: lib.rs
crates/pjs-wasm/: .gitignore  Cargo.toml  README.md
crates/pjs-wasm/demo/: README.md  app.js  index.html  styles.css
crates/pjs-wasm/src/: lib.rs  parser.rs  priority_assignment.rs  priority_config.rs  priority_constants.rs  security.rs  streaming.rs  utils.rs
crates/pjs-wasm/tests/: priority_parity.rs  streaming_comprehensive.rs
crates/sjsp-bench/: Cargo.toml
crates/sjsp-bench/src/: lib.rs
crates/sjsp-client/: Cargo.toml
crates/sjsp-client/src/: lib.rs
crates/sjsp-core/: Cargo.toml
crates/sjsp-core/src/: error.rs  frame.rs  lib.rs  stream.rs
crates/sjsp-core/src/parser/: hybrid.rs  mod.rs  simple.rs  value.rs
crates/sjsp-gpu/: Cargo.toml
crates/sjsp-gpu/src/: lib.rs
crates/sjsp-server/: Cargo.toml
crates/sjsp-server/src/: lib.rs
(+125 files in other folders)
