[workspace]
members = ["crates/pjs-core", "crates/pjs-bench", "crates/pjs-demo"]
resolver = "2"

[workspace.package]
homepage = "https://github.com/bug-ops/pjs"
documentation = "https://docs.rs/pjson-rs"
version = "0.3.0"
authors = ["Andrei G. <k05h31@gmail.com>"]
readme = "README.md"
edition = "2024"
rust-version = "1.88"
publish = false
license = "MIT OR Apache-2.0"
repository = "https://github.com/bug-ops/pjs"
description = "Priority JSON Streaming Protocol - high-performance priority-based JSON streaming library"
keywords = ["json", "streaming", "simd", "performance", "protocol"]
categories = ["encoding", "network-programming", "parser-implementations"]

[workspace.dependencies]
# Core dependencies
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }

# Performance
rayon = "1.11"
crossbeam = "0.8"
smallvec = { version = "1.11", features = ["union", "const_generics"] }
ahash = "0.8"
parking_lot = "0.12"

# SIMD and low-level
bitflags = "2.9"
memchr = "2.6"
bytemuck = "1.14"
sonic-rs = "0.5"
simd-json = "0.15"

# Async and network
futures = "0.3"
async-std = "1.12"
socket2 = "0.6"
axum = "0.8"
tower = "0.5"
tower-http = "0.6"
hyper = "1.6"
# quinn = { version = "0.10", optional = true }  # Will add when needed

# Memory management  
bumpalo = "3.14"
typed-arena = "2.0"

# Testing and benchmarking
criterion = "0.7"
proptest = "1.4"

# GPU (will be added later as separate crate dependencies)
# cudarc = { version = "0.10", optional = true }
# wgpu = { version = "0.18", optional = true }

# Utilities
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
uuid = "1.18"
async-trait = "0.1"
maplit = "1.0"
priority-queue = "2.0"

# Cryptographic hashing
sha2 = "0.10"

# HTTP client and metrics
reqwest = "0.12"
prometheus = "0.14"

# WebSocket
tokio-tungstenite = "0.27"
url = "2.5"

# Random generation  
rand = "0.9"

# Data generation
fake = "4.4"

# CLI
clap = "4.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"
debug = true
