[workspace]
members = ["crates/*"]
default-members = ["crates/pjs-core", "crates/pjs-domain", "crates/pjs-wasm"]
exclude = ["crates/pjs-bench", "crates/pjs-demo", "crates/pjs-js-client"]
resolver = "3"

[workspace.package]
homepage = "https://github.com/bug-ops/pjs"
documentation = "https://docs.rs/pjson-rs"
version = "0.4.7"
authors = ["Andrei G. <k05h31@gmail.com>"]
readme = "README.md"
edition = "2024"
rust-version = "1.89"
publish = false
license = "MIT OR Apache-2.0"
repository = "https://github.com/bug-ops/pjs"
description = "Priority JSON Streaming Protocol - high-performance priority-based JSON streaming library (requires nightly Rust)"
keywords = ["json", "streaming", "simd", "performance", "protocol"]
categories = ["encoding", "network-programming", "parser-implementations"]

[workspace.dependencies]
ahash = "0.8"
axum = "0.8"
bitflags = "2.10"
bumpalo = "3.19"
bytemuck = "1.24"
bytes = "1.11"
chrono = "0.4"
clap = "4.5"
console_error_panic_hook = "0.1"
criterion = "0.8"
crossbeam = "0.8"
dashmap = "6.1"
dhat = "0.3"
fake = "4.4"
futures = "0.3"
hyper = "1.8"
js-sys = "0.3"
libmimalloc-sys = "0.1"
maplit = "1.0"
memchr = "2.7"
mimalloc = "0.1"
once_cell = "1.21"
parking_lot = "0.12"
paste = "1.0"
pjson-rs-domain = { version = "0.4.7",path = "crates/pjs-domain" }
pjson-rs = { version = "0.4.7", path = "crates/pjs-core" }
priority-queue = "2.7"
prometheus = "0.14"
proptest = "1.9"
rand = "0.9"
rayon = "1.11"
reqwest = "0.13"
serde = "1.0"
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
sha2 = "0.10"
simd-json = "0.17"
smallvec = "1.15"
socket2 = "0.6"
sonic-rs = "0.5"
thiserror = "2.0"
tikv-jemalloc-ctl = "0.6"
tikv-jemalloc-sys = "0.6"
tikv-jemallocator = "0.6"
tokio = "1.49"
tokio-tungstenite = "0.28"
tower = "0.5"
tower-http = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
typed-arena = "2.0"
url = "2.5"
uuid = "1.20"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"
debug = true
