[package]
name = "pjs-bench"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Comprehensive benchmarking suite for PJS"
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
bytes = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }
pjson-rs = { path = "../pjs-core" }
serde_json = { workspace = true }
sonic-rs = { workspace = true }

[features]
default = ["streaming"]
streaming = []
simd-auto = []
simd-avx2 = []
simd-sse42 = []

[[bench]]
name = "simple_throughput"
harness = false

[[bench]]
name = "zero_copy_bench"
harness = false

# TODO: Fix benchmark compilation errors in future release
# [[bench]]
# name = "massive_data"
# harness = false
# 
# [[bench]]
# name = "time_to_first_data"
# harness = false
# 
# [[bench]]
# name = "network_simulation"
# harness = false
# 
# [[bench]]
# name = "memory_benchmarks"
# harness = false
# 
# [[bench]]
# name = "streaming_benchmarks"
# harness = false
