[package]
name = "pjs-bench"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Comprehensive benchmarking suite for PJS"
keywords = { workspace = true }
categories = { workspace = true }
publish = { workspace = true }

[dependencies]
bytes = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }
pjson-rs = { path = "../pjs-core" }
serde_json = { workspace = true }
sonic-rs = { workspace = true }

[features]
default = ["streaming"]
simd-auto = []
simd-avx2 = []
simd-sse42 = []
streaming = []

[[bench]]
name = "simple_throughput"
harness = false

[[bench]]
name = "zero_copy_bench"
harness = false
