[package]
name = "pjs-bench"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Comprehensive benchmarking suite for PJS"
keywords = { workspace = true }
categories = { workspace = true }
publish = { workspace = true }

[dependencies]
bytes = { workspace = true }
chrono = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }
pjson-rs = { workspace = true }
pjson-rs-domain = { workspace = true }
serde_json = { workspace = true }
sonic-rs = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
dhat = { workspace = true }

[features]
default = ["streaming"]
simd-auto = []
simd-avx2 = []
simd-sse42 = []
streaming = []
dhat-heap = []

[[bench]]
name = "simple_throughput"
harness = false

[[bench]]
name = "zero_copy_bench"
harness = false

[[bench]]
name = "serde_overhead_bench"
harness = false
