[package]
name = "pjs-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance PJS client with connection pooling and streaming"
keywords.workspace = true
categories.workspace = true

[dependencies]
pjson-rs = { path = "../pjs-core" }
pjs-transport = { path = "../pjs-transport" }

# Core
bytes.workspace = true
serde.workspace = true
tokio.workspace = true
futures.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Async utilities
parking_lot.workspace = true
crossbeam.workspace = true
smallvec.workspace = true

[dev-dependencies]
tokio-test = "0.4"
criterion.workspace = true

[features] 
default = ["tcp"]
tcp = ["pjs-transport/tcp"]
# quic = ["pjs-transport/quic"]  # Will be added later
tls = ["pjs-transport/tls"]