[package]
name = "pjson-rs"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Priority JSON Streaming Protocol - high-performance priority-based JSON streaming (requires nightly Rust)"
keywords = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }
exclude = ["/target", "/benches", "/tests", "examples/*"]
publish = true

[dependencies]
axum = { workspace = true, optional = true, features = ["ws"] }
bitflags = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
crossbeam = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true, optional = true }
libmimalloc-sys = { workspace = true, optional = true }
maplit = { workspace = true }
mimalloc = { workspace = true, optional = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
paste = { workspace = true }
pjson-rs-domain = { workspace = true }
priority-queue = { workspace = true }
prometheus = { workspace = true, optional = true }
rayon = { workspace = true }
reqwest = { workspace = true, features = ["json"], optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
smallvec = { workspace = true, features = ["serde", "union", "const_generics"] }
sonic-rs = { workspace = true }
thiserror = { workspace = true }
tikv-jemalloc-ctl = { workspace = true, optional = true, features = ["stats"] }
tikv-jemalloc-sys = { workspace = true, optional = true }
tikv-jemallocator = { workspace = true, optional = true }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "sync",
    "time",
    "macros",
    "net",
    "parking_lot",
] }
tokio-tungstenite = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, features = ["cors", "trace"], optional = true }
tracing = { workspace = true }
typed-arena = { workspace = true }
url = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[features]
default = ["simd-auto", "schema-validation"]

# SIMD features
simd-auto = []
simd-avx2 = []
simd-avx512 = []
simd-neon = []
simd-sse42 = []

# Memory allocator features (mutually exclusive)
jemalloc = [
    "dep:tikv-jemallocator",
    "dep:tikv-jemalloc-ctl",
    "dep:tikv-jemalloc-sys",
]
mimalloc = ["dep:mimalloc", "dep:libmimalloc-sys"]

# Optional features
compression = []
schema-validation = []

# Infrastructure features
http-client = ["dep:reqwest"]
http-server = ["dep:axum", "dep:tower", "dep:tower-http", "dep:futures"]
prometheus-metrics = ["dep:prometheus"]
websocket-client = ["dep:tokio-tungstenite", "dep:url"]
websocket-server = ["http-server"]

[package.metadata.cargo-udeps.ignore]
normal = ["axum", "tower", "tower-http", "hyper", "futures", "sha2"]

[package.metadata.cargo-machete]
ignored = ["tikv-jemallocator", "tikv-jemalloc-ctl", "mimalloc"]

# Trusted publishing configuration for crates.io
[package.metadata.release.publishers.crates-io]
trusted-publishing = true
# GitHub Actions OIDC issuer for trusted publishing
# Repository: https://github.com/bug-ops/pjs
# Workflow: .github/workflows/release.yml
issuer = "https://token.actions.githubusercontent.com"
repository = "bug-ops/pjs"
workflow = "release.yml"

[[example]]
name = "simple_priority_demo"
required-features = []

[[example]]
name = "zero_copy_demo"
required-features = []

[[example]]
name = "compression_demo"
required-features = ["compression"]

[[example]]
name = "schema_validation_demo"
required-features = ["schema-validation"]

[[example]]
name = "gat_performance_showcase"
required-features = []

[[example]]
name = "object_pool_performance"
required-features = []
