[package]
name = "pjs-demo"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Interactive PJS streaming demonstration servers and examples"

[dependencies]
# PJS
pjson-rs = { path = "../pjs-core" }

# Web server
axum = { workspace = true, features = ["ws"] }
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true

# Async
tokio = { workspace = true, features = ["full"] }
futures.workspace = true

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# WebSocket
tokio-tungstenite.workspace = true
url.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Time and utilities
chrono.workspace = true
uuid.workspace = true
rand.workspace = true

# CLI
clap = { version = "4.4", features = ["derive"] }

[[bin]]
name = "interactive-demo-server"
path = "src/servers/interactive_demo.rs"

[[bin]]
name = "websocket-streaming-server"
path = "src/servers/websocket_streaming.rs"

# TODO: Fix compilation errors
# [[bin]]
# name = "performance-comparison-server"
# path = "src/servers/performance_comparison.rs"

# TODO: Fix compilation errors  
# [[bin]]
# name = "websocket-client-demo"
# path = "src/clients/websocket_demo.rs"

[[bin]]
name = "simple-demo-server"
path = "src/servers/simple_demo.rs"
