[package]
name = "pjs-demo"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Interactive PJS streaming demonstration servers and examples"

[dependencies]
axum = { workspace = true, features = ["ws"] }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
pjson-rs = { path = "../pjs-core" }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

[[bin]]
name = "interactive-demo-server"
path = "src/servers/interactive_demo.rs"

[[bin]]
name = "simple-demo-server"
path = "src/servers/simple_demo.rs"

[[bin]]
name = "websocket-streaming-server"
path = "src/servers/websocket_streaming.rs"
