[package]
name = "pjs-domain"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
description = "Pure domain logic for PJS - WASM-compatible core"
repository = { workspace = true }
authors = { workspace = true }

[lib]
name = "pjs_domain"
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
smallvec = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { workspace = true, features = ["v4", "serde", "js"] }

[features]
default = ["std"]
std = ["thiserror/std"]
wasm = []

[dev-dependencies]
serde_json = { workspace = true }
