[package]
name = "pjson-rs-domain"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
description = "Pure domain logic for PJS - WASM-compatible core"
repository = { workspace = true }
authors = { workspace = true }
publish = true

[lib]
name = "pjson_rs_domain"
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
smallvec = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { workspace = true, features = ["v4", "serde", "js"] }

[features]
default = ["std"]
std = ["thiserror/std"]
wasm = []

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
