[package]
name = "pjs-transport"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Transport layer for PJS with zero-copy I/O optimizations"
keywords.workspace = true
categories.workspace = true

[dependencies]
pjson-rs = { path = "../pjs-core" }

# Core
bytes.workspace = true
tokio.workspace = true
futures.workspace = true
thiserror.workspace = true
tracing.workspace = true
socket2.workspace = true

# Optional transports (will be added later)
# quinn = { workspace = true, optional = true }
tokio-rustls = { version = "0.25", optional = true }
io-uring = { version = "0.6", optional = true }

# Zero-copy I/O
mio = { version = "0.8", features = ["net", "os-poll"] }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["tcp"]
tcp = []
# quic = ["dep:quinn"]  # Will be added later
tls = ["dep:tokio-rustls"]
io-uring = ["dep:io-uring"]
dpdk = []  # For future DPDK integration