[package]
name = "pjs-wasm"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "WebAssembly bindings for PJS - Priority JSON Streaming"
repository = "https://github.com/bug-ops/pjs"
authors = ["Andrei G. <k05h31@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pjs-domain = { path = "../pjs-domain", features = ["std", "wasm"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s" # Optimize for size
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os"]
