[package]
name = "pjs-wasm"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
description = "WebAssembly bindings for PJS - Priority JSON Streaming"
repository = { workspace = true }
authors = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = { workspace = true, optional = true }
js-sys = { workspace = true }
pjs-domain = { path = "../pjs-domain", features = ["std", "wasm"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen = { workspace = true }

[features]
default = ["console_error_panic_hook"]

[dev-dependencies]
wasm-bindgen-test = { workspace = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os"]
