[package]
name = "sjsp-gpu"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "GPU acceleration for SJSP using CUDA and OpenCL"
keywords.workspace = true
categories.workspace = true

[dependencies]
sjsp-core = { path = "../sjsp-core" }

# Core
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures.workspace = true

# GPU backends (all optional)
cudarc = { workspace = true, optional = true }
wgpu = { workspace = true, optional = true }
opencl3 = { version = "0.9", optional = true }

[dev-dependencies]
criterion.workspace = true

[features]
default = []
cuda = ["dep:cudarc"]
wgpu = ["dep:wgpu"]  
opencl = ["dep:opencl3"]
vulkan = ["wgpu/vulkan"]

[[bench]]
name = "gpu_numeric_parsing"
harness = false
required-features = ["cuda"]